objects/zkfedex__InternationalCommodity__c.object
<CustomObject>
    <customHelpPage>zkfedex__internationalCommodityHelp</customHelpPage>
    <description>International Commodity stores international data used when sending a FedEx shipment international.</description>
    <fields>
        <fullName>zkfedex__AllowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkfedex__CountryOfManufacture__c</fullName>
        <label>Country of Manufacture</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CustomsValueCurrency__c</fullName>
        <label>Customs Value Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__CustomsValue__c</fullName>
        <label>Customs Value</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__DocumentCommodityDescription__c</fullName>
        <label>Document Commodity Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correspondence/No Commercial Value</fullName>
                </value>
                <value>
                    <fullName>Accounting Documents</fullName>
                </value>
                <value>
                    <fullName>Analysis Reports</fullName>
                </value>
                <value>
                    <fullName>Applications (Completed)</fullName>
                </value>
                <value>
                    <fullName>Bank Statements</fullName>
                </value>
                <value>
                    <fullName>Bid Quotations</fullName>
                </value>
                <value>
                    <fullName>Birth Certificates</fullName>
                </value>
                <value>
                    <fullName>Bills of Sale</fullName>
                </value>
                <value>
                    <fullName>Bonds</fullName>
                </value>
                <value>
                    <fullName>Business Correspondence</fullName>
                </value>
                <value>
                    <fullName>Checks (Completed)</fullName>
                </value>
                <value>
                    <fullName>Claim Files</fullName>
                </value>
                <value>
                    <fullName>Closing Statements</fullName>
                </value>
                <value>
                    <fullName>Conference Reports</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Cost Estimates</fullName>
                </value>
                <value>
                    <fullName>Court Transcripts</fullName>
                </value>
                <value>
                    <fullName>Credit Applications</fullName>
                </value>
                <value>
                    <fullName>Data Sheets</fullName>
                </value>
                <value>
                    <fullName>Deeds</fullName>
                </value>
                <value>
                    <fullName>Employment Papers</fullName>
                </value>
                <value>
                    <fullName>Escrow Instructions</fullName>
                </value>
                <value>
                    <fullName>Export Papers</fullName>
                </value>
                <value>
                    <fullName>Financial Statements</fullName>
                </value>
                <value>
                    <fullName>Immigration Papers</fullName>
                </value>
                <value>
                    <fullName>Income Statements</fullName>
                </value>
                <value>
                    <fullName>Insurance Documents</fullName>
                </value>
                <value>
                    <fullName>Interoffice Memos</fullName>
                </value>
                <value>
                    <fullName>Inventory Reports</fullName>
                </value>
                <value>
                    <fullName>Invoices (Completed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkfedex__ExportLicenseExpirationDate__c</fullName>
        <label>Export License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkfedex__ExportLicenseNumber__c</fullName>
        <label>Export License Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__HarmonizedCode__c</fullName>
        <label>Harmonized Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__ModKey__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__NumberOfPieces__c</fullName>
        <description>Describes the number of boxes within a package. The boxes contain the commodity.</description>
        <inlineHelpText>Describes the number of boxes within a package. The boxes contain the commodity.</inlineHelpText>
        <label>Number of Pieces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__QuantityUnits__c</fullName>
        <label>Quantity Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__SequenceNumber__c</fullName>
        <description>The sequence number for the package this commodity is within</description>
        <inlineHelpText>The sequence number for the package this commodity is within</inlineHelpText>
        <label>Package Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkfedex__Shipment__c</referenceTo>
        <relationshipName>International_Commodities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkfedex__TrackingId__c</fullName>
        <description>The tracking number for the package this commodity is within</description>
        <inlineHelpText>The tracking number for the package this commodity is within</inlineHelpText>
        <label>Package Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__UnitPriceCurrency__c</fullName>
        <label>Unit Price Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkfedex__WeightUnits__c</fullName>
        <label>Weight Units</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__Weight__c</fullName>
        <label>Weight</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>FedEx International Commodity</label>
    <nameField>
        <displayFormat>IC-{0000000000}</displayFormat>
        <label>International Commodity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx International Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>